# minimax-testbench

./: .env.example  .gitignore  LICENSE  README.md  REPORT.md  app.py  config.py  minimax_client.py  pyproject.toml  requirements.txt  start.py
modules/: __init__.py  image.py  music.py  tts.py  video.py  voice_clone.py  voice_design.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_image.py  test_music.py  test_music_advanced.py  test_music_cover.py  test_tts.py  test_tts_polyphone.py  test_tts_variants.py  test_video.py  test_video_advanced.py  test_video_combined.py  test_voice_clone.py  test_voice_design.py
